# pucxobot

./: README.md  bot.py  commands.txt  game.py  leterobot.py  meson.build  pucxobot.py
doc/: protocol.txt  vortlisto-missing-words.txt
src/: check-missing-translations.py  dump-syllabary.c  fake-telegram.c  make-dictionary.c  make-syllables.c  merge-translations.py  meson.build  pcx-base64.c  pcx-base64.h  pcx-bot.c  pcx-bot.h  pcx-buffer.c  pcx-buffer.h  pcx-chameleon-help.c  pcx-chameleon-help.h  pcx-chameleon-list.c  pcx-chameleon-list.h  pcx-chameleon.c  pcx-chameleon.h  pcx-character.c  pcx-character.h  pcx-class-store.c  pcx-class-store.h  pcx-config.c  pcx-config.h  pcx-connection.c  pcx-connection.h  pcx-conversation.c  pcx-conversation.h  pcx-coup-character.c  pcx-coup-character.h  pcx-coup-clan.h  pcx-coup-help.c  pcx-coup-help.h  pcx-coup.c  pcx-coup.h  pcx-curl-multi.c  pcx-curl-multi.h  pcx-dictionary.c  pcx-dictionary.h  (+132 more)
web/: chameleon-visualisation.js  en.language-file  eo.language-file  fr.language-file  generate-help.py  htaccess  index.html  meson.build  message-reader.js  pucxo.js  pucxobot.css  pucxobot.js  sounds.txt  translate-file.pl  translate-file.py  wordparty-visualisation.js
web/cgi-bin/: main.c  meson.build
web/en/: help.html  meson.build
web/eo/: help.html
web/fr/: help.html  meson.build
web/vortofesto/: help.html  meson.build  vortofesto.language-file
